tigerc/tests/snapshots/test_tokenizer__tokenizer_test41.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test41.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 2, column: 1 } }
Posed { node: Ident(type), pos: Pos { line: 3, column: 5 } }
Posed { node: Ident(a), pos: Pos { line: 3, column: 10 } }
Posed { node: Eq, pos: Pos { line: 3, column: 12 } }
Posed { node: Ident(int), pos: Pos { line: 3, column: 14 } }
Posed { node: Ident(in), pos: Pos { line: 4, column: 1 } }
Posed { node: Ident(let), pos: Pos { line: 5, column: 5 } }
Posed { node: Ident(type), pos: Pos { line: 6, column: 9 } }
Posed { node: Ident(a), pos: Pos { line: 6, column: 14 } }
Posed { node: Eq, pos: Pos { line: 6, column: 16 } }
Posed { node: Ident(string), pos: Pos { line: 6, column: 18 } }
Posed { node: Ident(in), pos: Pos { line: 7, column: 5 } }
Posed { node: Number(0), pos: Pos { line: 8, column: 9 } }
Posed { node: Ident(end), pos: Pos { line: 9, column: 5 } }
Posed { node: Ident(end), pos: Pos { line: 10, column: 1 } }
