tigerc/tests/snapshots/test_tokenizer__tokenizer_test42.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test42.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 2, column: 1 } }
Posed { node: Ident(type), pos: Pos { line: 4, column: 1 } }
Posed { node: Ident(arrtype1), pos: Pos { line: 4, column: 6 } }
Posed { node: Eq, pos: Pos { line: 4, column: 15 } }
Posed { node: Ident(array), pos: Pos { line: 4, column: 17 } }
Posed { node: Ident(of), pos: Pos { line: 4, column: 23 } }
Posed { node: Ident(int), pos: Pos { line: 4, column: 26 } }
Posed { node: Ident(type), pos: Pos { line: 5, column: 1 } }
Posed { node: Ident(rectype1), pos: Pos { line: 5, column: 6 } }
Posed { node: Eq, pos: Pos { line: 5, column: 15 } }
Posed { node: OpenBrace, pos: Pos { line: 5, column: 17 } }
Posed { node: Ident(name), pos: Pos { line: 5, column: 18 } }
Posed { node: Colon, pos: Pos { line: 5, column: 22 } }
Posed { node: Ident(string), pos: Pos { line: 5, column: 23 } }
Posed { node: Comma, pos: Pos { line: 5, column: 29 } }
Posed { node: Ident(address), pos: Pos { line: 5, column: 31 } }
Posed { node: Colon, pos: Pos { line: 5, column: 38 } }
Posed { node: Ident(string), pos: Pos { line: 5, column: 39 } }
Posed { node: Comma, pos: Pos { line: 5, column: 45 } }
Posed { node: Ident(id), pos: Pos { line: 5, column: 47 } }
Posed { node: Colon, pos: Pos { line: 5, column: 49 } }
Posed { node: Ident(int), pos: Pos { line: 5, column: 51 } }
Posed { node: Comma, pos: Pos { line: 5, column: 55 } }
Posed { node: Ident(age), pos: Pos { line: 5, column: 57 } }
Posed { node: Colon, pos: Pos { line: 5, column: 60 } }
Posed { node: Ident(int), pos: Pos { line: 5, column: 62 } }
Posed { node: CloseBrace, pos: Pos { line: 5, column: 65 } }
Posed { node: Ident(type), pos: Pos { line: 6, column: 1 } }
Posed { node: Ident(arrtype2), pos: Pos { line: 6, column: 6 } }
Posed { node: Eq, pos: Pos { line: 6, column: 15 } }
Posed { node: Ident(array), pos: Pos { line: 6, column: 17 } }
Posed { node: Ident(of), pos: Pos { line: 6, column: 23 } }
Posed { node: Ident(rectype1), pos: Pos { line: 6, column: 26 } }
Posed { node: Ident(type), pos: Pos { line: 7, column: 1 } }
Posed { node: Ident(rectype2), pos: Pos { line: 7, column: 6 } }
Posed { node: Eq, pos: Pos { line: 7, column: 15 } }
Posed { node: OpenBrace, pos: Pos { line: 7, column: 17 } }
Posed { node: Ident(name), pos: Pos { line: 7, column: 18 } }
Posed { node: Colon, pos: Pos { line: 7, column: 23 } }
Posed { node: Ident(string), pos: Pos { line: 7, column: 25 } }
Posed { node: Comma, pos: Pos { line: 7, column: 31 } }
Posed { node: Ident(dates), pos: Pos { line: 7, column: 33 } }
Posed { node: Colon, pos: Pos { line: 7, column: 38 } }
Posed { node: Ident(arrtype1), pos: Pos { line: 7, column: 40 } }
Posed { node: CloseBrace, pos: Pos { line: 7, column: 48 } }
Posed { node: Ident(type), pos: Pos { line: 9, column: 1 } }
Posed { node: Ident(arrtype3), pos: Pos { line: 9, column: 6 } }
Posed { node: Eq, pos: Pos { line: 9, column: 15 } }
Posed { node: Ident(array), pos: Pos { line: 9, column: 17 } }
Posed { node: Ident(of), pos: Pos { line: 9, column: 23 } }
Posed { node: Ident(string), pos: Pos { line: 9, column: 26 } }
Posed { node: Ident(var), pos: Pos { line: 11, column: 1 } }
Posed { node: Ident(arr1), pos: Pos { line: 11, column: 5 } }
Posed { node: Assign, pos: Pos { line: 11, column: 10 } }
Posed { node: Ident(arrtype1), pos: Pos { line: 11, column: 13 } }
Posed { node: OpenBracket, pos: Pos { line: 11, column: 22 } }
Posed { node: Number(10), pos: Pos { line: 11, column: 23 } }
Posed { node: CloseBracket, pos: Pos { line: 11, column: 25 } }
Posed { node: Ident(of), pos: Pos { line: 11, column: 27 } }
Posed { node: Number(0), pos: Pos { line: 11, column: 30 } }
Posed { node: Ident(var), pos: Pos { line: 12, column: 1 } }
Posed { node: Ident(arr2), pos: Pos { line: 12, column: 5 } }
Posed { node: Assign, pos: Pos { line: 12, column: 11 } }
Posed { node: Ident(arrtype2), pos: Pos { line: 12, column: 14 } }
Posed { node: OpenBracket, pos: Pos { line: 12, column: 23 } }
Posed { node: Number(5), pos: Pos { line: 12, column: 24 } }
Posed { node: CloseBracket, pos: Pos { line: 12, column: 25 } }
Posed { node: Ident(of), pos: Pos { line: 12, column: 27 } }
Posed { node: Ident(rectype1), pos: Pos { line: 12, column: 30 } }
Posed { node: OpenBrace, pos: Pos { line: 12, column: 39 } }
Posed { node: Ident(name), pos: Pos { line: 12, column: 40 } }
Posed { node: Eq, pos: Pos { line: 12, column: 44 } }
Posed { node: Str(aname), pos: Pos { line: 12, column: 45 } }
Posed { node: Comma, pos: Pos { line: 12, column: 52 } }
Posed { node: Ident(address), pos: Pos { line: 12, column: 54 } }
Posed { node: Eq, pos: Pos { line: 12, column: 61 } }
Posed { node: Str(somewhere), pos: Pos { line: 12, column: 62 } }
Posed { node: Comma, pos: Pos { line: 12, column: 73 } }
Posed { node: Ident(id), pos: Pos { line: 12, column: 75 } }
Posed { node: Eq, pos: Pos { line: 12, column: 77 } }
Posed { node: Number(0), pos: Pos { line: 12, column: 78 } }
Posed { node: Comma, pos: Pos { line: 12, column: 79 } }
Posed { node: Ident(age), pos: Pos { line: 12, column: 81 } }
Posed { node: Eq, pos: Pos { line: 12, column: 84 } }
Posed { node: Number(0), pos: Pos { line: 12, column: 85 } }
Posed { node: CloseBrace, pos: Pos { line: 12, column: 86 } }
Posed { node: Ident(var), pos: Pos { line: 13, column: 1 } }
Posed { node: Ident(arr3), pos: Pos { line: 13, column: 5 } }
Posed { node: Colon, pos: Pos { line: 13, column: 9 } }
Posed { node: Ident(arrtype3), pos: Pos { line: 13, column: 10 } }
Posed { node: Assign, pos: Pos { line: 13, column: 19 } }
Posed { node: Ident(arrtype3), pos: Pos { line: 13, column: 22 } }
Posed { node: OpenBracket, pos: Pos { line: 13, column: 31 } }
Posed { node: Number(100), pos: Pos { line: 13, column: 32 } }
Posed { node: CloseBracket, pos: Pos { line: 13, column: 35 } }
Posed { node: Ident(of), pos: Pos { line: 13, column: 37 } }
Posed { node: Str(), pos: Pos { line: 13, column: 40 } }
Posed { node: Ident(var), pos: Pos { line: 15, column: 1 } }
Posed { node: Ident(rec1), pos: Pos { line: 15, column: 5 } }
Posed { node: Assign, pos: Pos { line: 15, column: 10 } }
Posed { node: Ident(rectype1), pos: Pos { line: 15, column: 13 } }
Posed { node: OpenBrace, pos: Pos { line: 15, column: 22 } }
Posed { node: Ident(name), pos: Pos { line: 15, column: 23 } }
Posed { node: Eq, pos: Pos { line: 15, column: 27 } }
Posed { node: Str(Kapoios), pos: Pos { line: 15, column: 28 } }
Posed { node: Comma, pos: Pos { line: 15, column: 37 } }
Posed { node: Ident(address), pos: Pos { line: 15, column: 39 } }
Posed { node: Eq, pos: Pos { line: 15, column: 46 } }
Posed { node: Str(Kapou), pos: Pos { line: 15, column: 47 } }
Posed { node: Comma, pos: Pos { line: 15, column: 54 } }
Posed { node: Ident(id), pos: Pos { line: 15, column: 56 } }
Posed { node: Eq, pos: Pos { line: 15, column: 58 } }
Posed { node: Number(2432), pos: Pos { line: 15, column: 59 } }
Posed { node: Comma, pos: Pos { line: 15, column: 64 } }
Posed { node: Ident(age), pos: Pos { line: 15, column: 66 } }
Posed { node: Eq, pos: Pos { line: 15, column: 69 } }
Posed { node: Number(44), pos: Pos { line: 15, column: 70 } }
Posed { node: CloseBrace, pos: Pos { line: 15, column: 72 } }
Posed { node: Ident(var), pos: Pos { line: 16, column: 1 } }
Posed { node: Ident(rec2), pos: Pos { line: 16, column: 5 } }
Posed { node: Assign, pos: Pos { line: 16, column: 10 } }
Posed { node: Ident(rectype2), pos: Pos { line: 16, column: 13 } }
Posed { node: OpenBrace, pos: Pos { line: 16, column: 22 } }
Posed { node: Ident(name), pos: Pos { line: 16, column: 23 } }
Posed { node: Eq, pos: Pos { line: 16, column: 27 } }
Posed { node: Str(Allos), pos: Pos { line: 16, column: 28 } }
Posed { node: Comma, pos: Pos { line: 16, column: 35 } }
Posed { node: Ident(dates), pos: Pos { line: 16, column: 37 } }
Posed { node: Eq, pos: Pos { line: 16, column: 42 } }
Posed { node: Ident(arrtype1), pos: Pos { line: 16, column: 44 } }
Posed { node: OpenBracket, pos: Pos { line: 16, column: 53 } }
Posed { node: Number(3), pos: Pos { line: 16, column: 54 } }
Posed { node: CloseBracket, pos: Pos { line: 16, column: 55 } }
Posed { node: Ident(of), pos: Pos { line: 16, column: 57 } }
Posed { node: Number(1900), pos: Pos { line: 16, column: 60 } }
Posed { node: CloseBrace, pos: Pos { line: 16, column: 64 } }
Posed { node: Ident(in), pos: Pos { line: 18, column: 1 } }
Posed { node: Ident(arr1), pos: Pos { line: 20, column: 1 } }
Posed { node: OpenBracket, pos: Pos { line: 20, column: 5 } }
Posed { node: Number(0), pos: Pos { line: 20, column: 6 } }
Posed { node: CloseBracket, pos: Pos { line: 20, column: 7 } }
Posed { node: Assign, pos: Pos { line: 20, column: 9 } }
Posed { node: Number(1), pos: Pos { line: 20, column: 12 } }
Posed { node: SemiColon, pos: Pos { line: 20, column: 13 } }
Posed { node: Ident(arr1), pos: Pos { line: 21, column: 1 } }
Posed { node: OpenBracket, pos: Pos { line: 21, column: 5 } }
Posed { node: Number(9), pos: Pos { line: 21, column: 6 } }
Posed { node: CloseBracket, pos: Pos { line: 21, column: 7 } }
Posed { node: Assign, pos: Pos { line: 21, column: 9 } }
Posed { node: Number(3), pos: Pos { line: 21, column: 12 } }
Posed { node: SemiColon, pos: Pos { line: 21, column: 13 } }
Posed { node: Ident(arr2), pos: Pos { line: 22, column: 1 } }
Posed { node: OpenBracket, pos: Pos { line: 22, column: 5 } }
Posed { node: Number(3), pos: Pos { line: 22, column: 6 } }
Posed { node: CloseBracket, pos: Pos { line: 22, column: 7 } }
Posed { node: Dot, pos: Pos { line: 22, column: 8 } }
Posed { node: Ident(name), pos: Pos { line: 22, column: 9 } }
Posed { node: Assign, pos: Pos { line: 22, column: 14 } }
Posed { node: Str(kati), pos: Pos { line: 22, column: 17 } }
Posed { node: SemiColon, pos: Pos { line: 22, column: 23 } }
Posed { node: Ident(arr2), pos: Pos { line: 23, column: 1 } }
Posed { node: OpenBracket, pos: Pos { line: 23, column: 5 } }
Posed { node: Number(1), pos: Pos { line: 23, column: 6 } }
Posed { node: CloseBracket, pos: Pos { line: 23, column: 7 } }
Posed { node: Dot, pos: Pos { line: 23, column: 8 } }
Posed { node: Ident(age), pos: Pos { line: 23, column: 9 } }
Posed { node: Assign, pos: Pos { line: 23, column: 13 } }
Posed { node: Number(23), pos: Pos { line: 23, column: 16 } }
Posed { node: SemiColon, pos: Pos { line: 23, column: 18 } }
Posed { node: Ident(arr3), pos: Pos { line: 24, column: 1 } }
Posed { node: OpenBracket, pos: Pos { line: 24, column: 5 } }
Posed { node: Number(34), pos: Pos { line: 24, column: 6 } }
Posed { node: CloseBracket, pos: Pos { line: 24, column: 8 } }
Posed { node: Assign, pos: Pos { line: 24, column: 10 } }
Posed { node: Str(sfd), pos: Pos { line: 24, column: 13 } }
Posed { node: SemiColon, pos: Pos { line: 24, column: 18 } }
Posed { node: Ident(rec1), pos: Pos { line: 26, column: 1 } }
Posed { node: Dot, pos: Pos { line: 26, column: 5 } }
Posed { node: Ident(name), pos: Pos { line: 26, column: 6 } }
Posed { node: Assign, pos: Pos { line: 26, column: 11 } }
Posed { node: Str(sdf), pos: Pos { line: 26, column: 14 } }
Posed { node: SemiColon, pos: Pos { line: 26, column: 19 } }
Posed { node: Ident(rec2), pos: Pos { line: 27, column: 1 } }
Posed { node: Dot, pos: Pos { line: 27, column: 5 } }
Posed { node: Ident(dates), pos: Pos { line: 27, column: 6 } }
Posed { node: OpenBracket, pos: Pos { line: 27, column: 11 } }
Posed { node: Number(0), pos: Pos { line: 27, column: 12 } }
Posed { node: CloseBracket, pos: Pos { line: 27, column: 13 } }
Posed { node: Assign, pos: Pos { line: 27, column: 15 } }
Posed { node: Number(2323), pos: Pos { line: 27, column: 18 } }
Posed { node: SemiColon, pos: Pos { line: 27, column: 22 } }
Posed { node: Ident(rec2), pos: Pos { line: 28, column: 1 } }
Posed { node: Dot, pos: Pos { line: 28, column: 5 } }
Posed { node: Ident(dates), pos: Pos { line: 28, column: 6 } }
Posed { node: OpenBracket, pos: Pos { line: 28, column: 11 } }
Posed { node: Number(2), pos: Pos { line: 28, column: 12 } }
Posed { node: CloseBracket, pos: Pos { line: 28, column: 13 } }
Posed { node: Assign, pos: Pos { line: 28, column: 15 } }
Posed { node: Number(2323), pos: Pos { line: 28, column: 18 } }
Posed { node: Ident(end), pos: Pos { line: 30, column: 1 } }
