tigerc/tests/snapshots/test_tokenizer__tokenizer_test5.snap
---
source: tigerc/tests/test_tokenizer.rs
expression: "tokenize_snapshot(\"tests/testcases/test5.tig\")"
---
Posed { node: Ident(let), pos: Pos { line: 2, column: 1 } }
Posed { node: Ident(type), pos: Pos { line: 4, column: 1 } }
Posed { node: Ident(intlist), pos: Pos { line: 4, column: 6 } }
Posed { node: Eq, pos: Pos { line: 4, column: 14 } }
Posed { node: OpenBrace, pos: Pos { line: 4, column: 16 } }
Posed { node: Ident(hd), pos: Pos { line: 4, column: 17 } }
Posed { node: Colon, pos: Pos { line: 4, column: 19 } }
Posed { node: Ident(int), pos: Pos { line: 4, column: 21 } }
Posed { node: Comma, pos: Pos { line: 4, column: 24 } }
Posed { node: Ident(tl), pos: Pos { line: 4, column: 26 } }
Posed { node: Colon, pos: Pos { line: 4, column: 28 } }
Posed { node: Ident(intlist), pos: Pos { line: 4, column: 30 } }
Posed { node: CloseBrace, pos: Pos { line: 4, column: 37 } }
Posed { node: Ident(type), pos: Pos { line: 7, column: 1 } }
Posed { node: Ident(tree), pos: Pos { line: 7, column: 6 } }
Posed { node: Eq, pos: Pos { line: 7, column: 11 } }
Posed { node: OpenBrace, pos: Pos { line: 7, column: 12 } }
Posed { node: Ident(key), pos: Pos { line: 7, column: 13 } }
Posed { node: Colon, pos: Pos { line: 7, column: 16 } }
Posed { node: Ident(int), pos: Pos { line: 7, column: 18 } }
Posed { node: Comma, pos: Pos { line: 7, column: 21 } }
Posed { node: Ident(children), pos: Pos { line: 7, column: 23 } }
Posed { node: Colon, pos: Pos { line: 7, column: 31 } }
Posed { node: Ident(treelist), pos: Pos { line: 7, column: 33 } }
Posed { node: CloseBrace, pos: Pos { line: 7, column: 41 } }
Posed { node: Ident(type), pos: Pos { line: 8, column: 1 } }
Posed { node: Ident(treelist), pos: Pos { line: 8, column: 6 } }
Posed { node: Eq, pos: Pos { line: 8, column: 15 } }
Posed { node: OpenBrace, pos: Pos { line: 8, column: 17 } }
Posed { node: Ident(hd), pos: Pos { line: 8, column: 18 } }
Posed { node: Colon, pos: Pos { line: 8, column: 20 } }
Posed { node: Ident(tree), pos: Pos { line: 8, column: 22 } }
Posed { node: Comma, pos: Pos { line: 8, column: 26 } }
Posed { node: Ident(tl), pos: Pos { line: 8, column: 28 } }
Posed { node: Colon, pos: Pos { line: 8, column: 30 } }
Posed { node: Ident(treelist), pos: Pos { line: 8, column: 32 } }
Posed { node: CloseBrace, pos: Pos { line: 8, column: 40 } }
Posed { node: Ident(var), pos: Pos { line: 10, column: 1 } }
Posed { node: Ident(lis), pos: Pos { line: 10, column: 5 } }
Posed { node: Colon, pos: Pos { line: 10, column: 8 } }
Posed { node: Ident(intlist), pos: Pos { line: 10, column: 9 } }
Posed { node: Assign, pos: Pos { line: 10, column: 17 } }
Posed { node: Ident(intlist), pos: Pos { line: 10, column: 20 } }
Posed { node: OpenBrace, pos: Pos { line: 10, column: 28 } }
Posed { node: Ident(hd), pos: Pos { line: 10, column: 30 } }
Posed { node: Eq, pos: Pos { line: 10, column: 32 } }
Posed { node: Number(0), pos: Pos { line: 10, column: 33 } }
Posed { node: Comma, pos: Pos { line: 10, column: 34 } }
Posed { node: Ident(tl), pos: Pos { line: 10, column: 36 } }
Posed { node: Eq, pos: Pos { line: 10, column: 38 } }
Posed { node: Ident(nil), pos: Pos { line: 10, column: 40 } }
Posed { node: CloseBrace, pos: Pos { line: 10, column: 44 } }
Posed { node: Ident(in), pos: Pos { line: 12, column: 1 } }
Posed { node: Ident(lis), pos: Pos { line: 13, column: 5 } }
Posed { node: Ident(end), pos: Pos { line: 14, column: 1 } }
